    - add get_registered_object function (messju, Monte)
    - treat unrecognized param attribute syntax as string (Monte)
    - support $smarty.const.$foo syntax (messju, Monte)
    - remove E_NOTICE warnings from debug.tpl,
      escape modifier (Kanstantin, Monte)
    - don't count non-ascii chars in count_words modifier
      (Kanstantin, Monte)
    - clean up param calls to _parse_var and _parse_attrs (Monte)
    - define $template_source var, elude possible warning
      (Monte)
    - fix syntax problem with evaluating PHP constants (Monte)
    - add @ and === as valid if statement tokens (Monte)
    - enable error messages for config_load errors,
      use $this->config_class for loading class name (Monte)
    - fix html_options to not escape already escaped entities (Monte)
    - send Last-Modified header on cache creation (Monte)
    - check strict syntax of function attributes (Monte) 
    - dropped support for modifers on object parameters,
      added support for objects as modifier parameters (Monte)
    - fixed bug with decimal numbers in if statements (Monte)

Version 2.4.2 (Feb 11, 2003)
----------------------------
    - support embedded variables in objects (Monte)
    - fix bug with objects with no properties (M Mohr, Monte)
    - support full dollar var syntax in quoted text (Monte)
    - fixed bug in $smarty.const.FOO introduced in 2.4.1 (M
      Mohr, Monte)

Version 2.4.1 (Feb 6, 2003)
---------------------------

    - ignore case in IF statements (Rainer Collet, Monte)
    - treat undefined constants as null (Ferdinand Beyer, Monte)
    - fix problem with inserts and nested fetches
      (Rainer Collet, Monte)
    - added support for passing params to include_php
      (Tim Riley, Monte)
    - added support for math operators in if statements (Monte)
    - added support for $foo->bar[$x].blah syntax (Monte)

Version 2.4.0 (Feb 2, 2003)
---------------------------

    - fix known problems with php tag handling in templates