@@ -227,7 +227,8 @@ class Smarty
                                     'IF_FUNCS'        => array('array', 'list',
                                                                'isset', 'empty',
                                                                'count', 'sizeof',
-                                                               'in_array', 'is_array'),
+                                                               'in_array', 'is_array',
+															   'true','false'),
                                     'INCLUDE_ANY'     => false,
                                     'PHP_TAGS'        => false,
                                     'MODIFIER_FUNCS'  => array('count'),
