@@ -1,3 +1,4 @@
+    - support $foo->bar[index] syntax (Monte)
     - add get_registered_object function (messju, Monte)
     - treat unrecognized param attribute syntax as string (Monte)
     - support $smarty.const.$foo syntax (messju, Monte)
